# lmfetch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  implementation-plan.md  install.sh  main_entry.py  package.json  pyproject.toml  railway.toml
.changeset/: release-b.md  release-j.md  release-r.md
.github/workflows/: ci-bun.yml  ci-python.yml  ci.yml  release-bun.yml  release-python.yml  release.yml
.semversioner/: 0.1.0.json  0.1.1.json  0.1.2.json  0.2.0.json  0.3.0.json  0.3.1.json  0.3.2.json  0.3.3.json  0.3.4.json  0.3.5.json  0.3.6.json
.semversioner/next-release/: minor-20260118103121116565.json  minor-20260118113030796998.json  minor-20260118120932996282.json  patch-20260118104939075223.json  patch-20260118110504662812.json  patch-20260118121943483918.json  patch-20260118122437791337.json  patch-20260118123430187823.json  patch-20260118134919181094.json  patch-20260118143445560628.json  patch-20260118144741288426.json
api/: main.py  requirements.txt
benchmarks/: benchmark_chunking.py
frontend/: package.json  pnpm-lock.yaml
lmfetch/: builder.py  cli.py
lmfetch-bun/: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  demo-render.ts  examples.ts  package.json  test-tokenize.ts  tsconfig.json
lmfetch-bun/.changeset/: sour-friends-like.md
lmfetch-bun/src/: builder.ts  cache.ts  chunking-parallel.ts  cli.ts  index.ts  tokens.ts  utils.ts
lmfetch/analyzers/: __init__.py  importance.py  llm.py
lmfetch/chunkers/: __init__.py  base.py  code.py
lmfetch/rankers/: __init__.py  base.py  embedding.py  hybrid.py  keyword.py
(+25 files in other folders)
